01-1-echo/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-echo
spec:
  ingressClassName: nginx
  rules:
  - host: "echo.chalam-kitchen.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: echo-service
            port:
              number: 80
